# wordle-solver

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain
shader/: Cargo.toml
shader/src/: lib.rs
src/: ascii_bit_set.rs  fivegram.rs  main.rs  pattern.rs  shader.rs  simd_pattern.rs  word.rs
