[package]
name = "wordle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
rayon = "1.5.1"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[dev-dependencies]
proptest = "1.0.0"
pretty_assertions = "1.1.0"