[package]
name = "wordle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
rayon = "1.5.1"
core_simd = { git = "https://github.com/rust-lang/portable-simd", rev = "cad74346fb8f55f0e3a7dc7c4b64b56681d8ee2b" }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["spirv", "vulkan-portability"] }

[dev-dependencies]
proptest = "1.0.0"
pretty_assertions = "1.1.0"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }